<resources>
    <string name="app_name">ParkingBro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_phone">Your phone number</string>
    <string name="next">Next</string>
    <string name="unknown_country">Unknown Country</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_country_code_hint">Please confirm your country code and enter your phone number.</string>
    <string name="georgia_phone_code">+995</string>
    <string name="go_back">Go back</string>
    <string name="is_this_correct_number_question">Is this the correct number?</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="sorry">Sorry</string>
    <string name="ok">OK</string>
    <string name="invalid_phone_number_hint">Invalid phone number. Please check the number and try again.</string>
    <string name="activation_sms_sent_hint">We\'ve sent an SMS with an activation code to your phone</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="icon">Icon</string>
    <string name="enter_code">Enter code</string>
    <string name="you_can_request_a_new_code_in">You can request a new code in</string>
    <string name="tap_to_get_a_new_code">Tap to get a new code</string>
    <string name="sending_code">Sending code …</string>
    <string name="code_sent"> - Code sent - </string>
    <string name="close">Close</string>
    <string name="Continue">Continue</string>
    <string name="call_permission_hint">Please allow ParkingBro to call the number so that we can automatically call for you.</string>
    <string name="search">Search</string>
    <string name="car_search">Car search</string>
    <string name="car_search_hint">Enter the license plate number \n to search for information.</string>
    <string name="car_plate_place_holder">XX-117-XX</string>
    <string name="no_data_found_hint">Sorry, we couldn\'t find any data.</string>
    <string name="database_error">Sorry, database error occurred</string>
    <string name="try_again">Try again</string>
    <string name="name_unknown">Name Unknown</string>
    <string name="contacts_permission_hint">Please allow ParkingBro to read contacts so that you can continue using our database.</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="add_car_hint">You should firstly add your car to continue using our database</string>
    <string name="undo">Undo</string>
    <string name="car_is_already_added_hint">Car is already added by other user.</string>
    <string name="car_added_successfully">Car successfully added to databse.</string>
    <string name="added_to_saves">Added to saves.</string>
    <string name="item_delete_hint">Swipe item left to delete it.</string>
</resources>