<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AuthFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_phone"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/phone_number_country_code_hint" />


        <EditText
            android:id="@+id/country_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:enabled="false"
            android:hint="@string/unknown_country"
            android:importantForAutofill="no"
            android:inputType="none"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/full_phone_number_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:weightSum="2.5">

            <EditText
                android:id="@+id/country_code_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="0.6"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:nextFocusRight="@id/phone_number_et"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/georgia_phone_code" />

            <EditText
                android:id="@+id/phone_number_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="2"
                android:hint="@string/phone_number"
                android:imeOptions="actionGo"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

        </LinearLayout>

    </LinearLayout>

    <com.bro.parking.custom_components.LoadingFab
        android:id="@+id/fab_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/blue_500"
        android:contentDescription="@string/next"
        android:src="@drawable/baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/RoundFab"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>